[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []

[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['hpips-node-runtime/std']

[dependencies.hpips-node-runtime]
default-features = false
path = '..'

[package]
authors = ['hpips']
edition = '2018'
name = 'hpips-node-runtime-wasm'
version = '1.0.0'
